# flask-social-network

./: .dev.env  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  collection.json  compose.yaml  config.py  main.py  pyproject.toml  run.py  runserver.sh
.github/workflows/: deploy.yml
app/: __init__.py
app/controllers/: __init__.py  default.py  readme.txt  testController.py  userController.py
app/model_schemas/: userSchema.py
app/models/: tables.py  userTable.py
docker/: entrypoint.sh
docs/: environment_variables.md
static/css/: style.css
templates/: index.html
tests/: __init__.py  test_endpoint.py
