[tool.poetry]
name = "flask-social-network"
version = "0.1.0"
description = ""
authors = ["Cinnamoon <pedrolcsilva10@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
flask-sqlalchemy = "^3.0.3"
flask-migrate = "^4.0.4"
psycopg2-binary = "^2.9.6"
flask-cors = "^4.0.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
